p2/confs/app1.yml
# Déploiement de l'application app1 avec 1 réplica
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 1 # Nombre de pods à déployer
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1-nginx
        image: nginx:alpine # Utilisation de l'image Nginx Alpine
        ports:
        - containerPort: 80 # Port exposé par le conteneur
        volumeMounts:
          - name: html-volume
            mountPath: /usr/share/nginx/html # Montage du ConfigMap dans le répertoire HTML de Nginx
      volumes:
      - name: html-volume
        configMap:
          name: app1-config # Nom du ConfigMap à monter

---
# Service pour exposer l'application app1
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80 # Port du service
      targetPort: 80 # Port cible sur le pod
