p2/confs/app2.yml
# Déploiement de l'application app2 avec 3 réplicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 3 # Nombre de pods à déployer
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2-nginx
        image: nginx:alpine # Utilisation de l'image Nginx Alpine
        ports:
        - containerPort: 80 # Port exposé par le conteneur
        volumeMounts:
          - name: html-volume
            mountPath: /usr/share/nginx/html # Montage du ConfigMap dans le répertoire HTML de Nginx
      volumes:
      - name: html-volume
        configMap:
          name: app2-config # Nom du ConfigMap à monter

---
# Service pour exposer l'application app2
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80 # Port du service
      targetPort: 80 # Port cible sur le pod
